--- a/rp-bw-duckdb/lightweight_data_stack.ipynb
+++ b/rp-bw-duckdb/lightweight_data_stack.ipynb
@@ -5,7 +5,7 @@
    "id": "cf6122d8",
    "metadata": {},
    "source": [
-    "# Using Webserver Logs to Answer Product and Business Questions \n",
+    "# Using Web Server Logs to Answer Product and Business Questions \n",
     "## Redpanda + Bytewax + DuckDB\n",
     "\n",
     "Back when I worked at GitHub, we pulled many of our metrics out of a data source we called requests. This was an accumulation of all (or nearly all) of the HTTP requests across the GitHub products. The data originated from logs generated from web servers or in some cases from a load balancer. This data allowed us to determine things like who is using which parts of the product and how they are using the product. It turns out this is a more common source of data than just GitHub. Companies often lack perfect telemetry for their products and in order to get information on what is happening, we can look to the server log data.\n",
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b135ad1a",
+   "id": "55f9131d",
    "metadata": {},
    "source": [
     "Let's take a quick look at what the server logs look like before diving into the dataflow code below."
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "3250482a",
+   "id": "69415a85",
    "metadata": {},
    "outputs": [
     {
